scripts/nullaway/annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8.txt
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:119: error: [NullAway] initializer method does not guarantee @NonNull fields _portagedItems (line 63), _subStacks (line 69) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Stack(Unit unit,int unitID,int stackID)
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:185: error: [NullAway] initializer method does not guarantee @NonNull fields _portagedItems (line 63), _subStacks (line 69) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Stack(Stack stack)
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:259: error: [NullAway] dereferenced expression _positionLabel is @Nullable
		if (!_positionLabel.isEmpty()) return _positionLabel;
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:265: error: [NullAway] dereferenced expression _subStacks.get(_subStacks.keySet().toArray()[0]) is @Nullable
			return _subStacks.get(_subStacks.keySet().toArray()[0]).toString();
			                                                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/counters/Unit.java:179: error: [NullAway] dereferenced expression _description is @Nullable
		return _description.toString();
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:88: error: [NullAway] dereferenced expression _sides.get(side) is @Nullable
		    _sides.get(side).addPlayer(name,nationality,entryTurn))
		                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:109: error: [NullAway] dereferenced expression _sides.get(side) is @Nullable
		return _sides.get(side).player(name);
		                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:120: error: [NullAway] dereferenced expression _sides.get(Side.Sides.ALLIES) is @Nullable
		_alliedPlayers.addAll(_sides.get(Side.Sides.ALLIES).playerList());
		                                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:123: error: [NullAway] dereferenced expression _sides.get(Side.Sides.AXIS) is @Nullable
		_axisPlayers.addAll(_sides.get(Side.Sides.AXIS).playerList());
		                                               ^
    (see http://t.uber.com/nullaway )
9 errors
